--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,6 @@
 </head>
 <body>
   <app-root></app-root>
+  <script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js?ver=1.3.2'></script>
 </body>
 </html>
